--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,10 @@
 // app global css in SCSS form
+//drawer element
+.q-drawer {
+  .q-item {
+    opacity: 0.6;
+    &.q-router-link--exact-active {
+      opacity: 1;
+    }
+  }
+}
